@@ -1,4 +1,6 @@
 DIST fhist-1.14.tar.gz 268321 RMD160 6968c9832638a574ae6bbefc2ff258b0f1d18e4c SHA1 991e22f8451731c824113b55eaa9c5561539ce4d SHA256 2f6df7baaa2b7a003e9633d46fe768d30a2aa4c768ad6d677116bc32f274bb94
-EBUILD fhist-1.14.ebuild 932 RMD160 ee0a36fe56ad964940d1e04cee4469dd33d72c11 SHA1 6bdb6a5269d9c99bb9a3148216b961ff973d95c3 SHA256 b966ef8b10f893643d29c3724d5e98a22e34fa08a1d6125934e61e89d6acd15d
-MISC ChangeLog 2225 RMD160 44968896731d686da58bcbac7e7fe567c01acc7b SHA1 13a6b48ad4e1df9f967201576cc8e044cfbca066 SHA256 743c41ecba21d3714ea0b43528bfd58b556c20ab1d3a78016aadc3df2400555b
+DIST fhist-1.16.tar.gz 383180 RMD160 234ae94aeb9638453ac6ba4aebbe66b3af36f24a SHA1 e8d4f353240bde8afd48862d9b225c410e47c11e SHA256 3f71c86939694755e456a9c82156f779063e74240d21da2251f33ae3c25ea336
+EBUILD fhist-1.14.ebuild 955 RMD160 b6ac8c72c7fea20a468225445419694a228d94f1 SHA1 22168fc2bb808cc5560c2d2122e3df4c2e9fa51e SHA256 1205766008cb62ee37a307eaa6c3a34672070163c0edbd069cfa1b9401ebd639
+EBUILD fhist-1.16.ebuild 966 RMD160 d1d5562c91f766d7b5ccb02a65fa1d9ca2dfeb9e SHA1 14c615008eff24e17831bcd6eaa91789c4005253 SHA256 2f612fc51639e7e710b5aa5479165383ca692717c8c168611ee757b90f07079b
+MISC ChangeLog 2472 RMD160 0505956649c706033b5ba4f44b3a5033b398265b SHA1 bf20d447d3d867992360bb775d24502c24be38e4 SHA256 9a47702e08c1c845a9432a81cd4325403c8c7139d4481b15a28d89d536bf806e
 MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
