@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/fhist
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/fhist/ChangeLog,v 1.15 2007/02/09 07:43:58 flameeyes Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/fhist/ChangeLog,v 1.16 2008/05/12 22:23:54 pva Exp $
+
+*fhist-1.16 (12 May 2008)
+
+  12 May 2008; Peter Volkov <pva@gentoo.org> -fhist-1.10.ebuild,
+  fhist-1.14.ebuild, +fhist-1.16.ebuild:
+  Version bump. Removed runtime-depend on sys-devel/bison, bug 221597, thank
+  Diego Pettenò for report. Removed old.
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
